# Risk_management

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_KOR.md  DATA_UPDATE_GUIDE.md  DEPLOYMENT_GUIDE.md  EXTERNAL_NEWS_VERIFICATION_COMPLETE.md  GITHUB_ACTIONS_SETUP.md  KAKAO_WEBHOOK_SETUP.md  README.md  SENTIMENT_ANALYSIS.md  STREAMLIT_CLOUD_SETUP.md  SYSTEM_OVERVIEW.md  TECHNICAL_OVERVIEW.md  TELEGRAM_CHATID_FIX.md  TELEGRAM_GROUP_SETUP.md  VERIFICATION_INTEGRATION_REPORT.md  adaptive_learning.py  api_status_check.py  benchmark_result_151326.txt  benchmark_test.py  brd.md  build_index.py  comprehensive_benchmark_152317.txt  comprehensive_benchmark_test.py  crisis_benchmark_014317.txt  crisis_benchmark_014526.txt  crisis_benchmark_test.py  crisis_case_analysis.py  crisis_response_enhancer.py  daily_briefing.py  dashboard.py  data_based_llm.py  data_version_manager.py  enhanced_data_based_llm.py  enhanced_research_service.py  final_performance_test.py  final_performance_test_012936.txt  financial_case_analysis.py  financial_enhancer.py  (+46 more)
.claude/: settings.local.json
.github/: trigger.txt
.streamlit/: config.toml
app/: main.py  main_test.py  streamlit_simple.py
components/: __init__.py  news_dashboard.py  publisher_dashboard.py  status_dashboard.py
config/: settings.py
data/: api_usage.json  daily_stats.json  master_data.json  master_data_backup.json  master_data_backup_2026-06-17.json  monitor_state.json  monitoring_log.jsonl  news_monitor.csv  pending_articles.json  performance.db  risk_report.txt  run_status.json  sent_articles_cache.json  system_status.json  (+5 more)
(+76 files in other folders)
