[project]
name = "risk-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chardet>=5.2.0",
    "faiss-cpu>=1.11.0.post1",
    "joblib>=1.5.1",
    "numpy>=2.3.2",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "pathlib2>=2.3.7.post1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "streamlit>=1.47.1",
]
